[tool.poetry]
name = "iam-load-testing"
version = "0.1.0"
description = ""
authors = ["Tom Thorogood <tom@tomthorogood.com>"]

[tool.poetry.dependencies]
python = "^3.8"
locust = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
